--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
 
+  equatable: ^2.0.5
+  flex_color_scheme: ^7.3.1
+  riverpod: ^2.4.9
+  font_awesome_flutter: ^10.6.0
+  gap: ^3.0.1
+  go_router: ^13.0.0
+  google_fonts: ^6.1.0
+  intl: ^0.18.0
+  path: ^1.8.0
+  sqflite: ^2.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
