--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
 
   equatable: ^2.0.5
   flex_color_scheme: ^7.3.1
-  riverpod: ^2.4.9
+  flutter_riverpod: ^2.3.6
   font_awesome_flutter: ^10.6.0
   gap: ^3.0.1
   go_router: ^13.0.0
